WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139566
Initialize m_ownsGeneratedFile when decoding a FormDataElement
https://bugs.webkit.org/show_bug.cgi?id=139566
Summary
Initialize m_ownsGeneratedFile when decoding a FormDataElement
Alexey Proskuryakov
Reported
2014-12-11 15:41:46 PST
I've seen assertion failures in NetworkProcess caused by an incorrect value for FormDataElement::m_ownsGeneratedFile. Turns out that we don't initialize it when restoring from IPC serialization.
Attachments
proposed fix
(1.35 KB, patch)
2014-12-11 15:44 PST
,
Alexey Proskuryakov
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-12-11 15:44:17 PST
Created
attachment 243158
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2014-12-11 15:50:16 PST
Committed <
http://trac.webkit.org/r177188
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug